--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
       <button class="start-button" onclick="openModal()">Start</button>
       <button
         class="return-button"
-        onclick="location.href='https://danilq1.github.io/tima.github.io/'"
+        onclick="window.location.href='https://unermindden.github.io/uzbekibot.github.io/';"
       >
         Back
       </button>
